[package]
name = "xedsys"
version = "0.1.0"
authors = ["TA Thanh Dinh <tathanhdinh@gmail.com>"]
description = "Low-level bindings for Intel Xed (X86 Encoded Decoded)"
edition = "2018"
build = "build.rs"

[dependencies]

[build-dependencies]
bindgen = { git = "https://github.com/tathanhdinh/rust-bindgen.git", branch = "no-partialord" }